Moved the footer inside of main in order to make it align correctly.

--- a/style.css
+++ b/style.css
@@ -57,6 +57,9 @@ body {
 main {
     margin: var(--margin);
     padding: var(--padding);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1,
